--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,13 +7,14 @@
 <body>
     <div class="wrap">
         <header>
-            <h1><%= title %></h1>
+            <h1 class="hd-title"><%= title %></h1>
         </header>
         <nav>
             <ul>
                 <li><a href="/" title="主页">主页</a></li>
                 <% if(user) { %>
                 <li><a href="/post" title="发表">发表</a></li>
+                <li><a href="/upload" title="上传">上传</a></li>
                 <li><a href="/logout" title="登出">登出</a></li>
                 <% } else{ %>
                 <li><a href="/login" title="主页">登录</a></li>
