--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include header %>
-    <div class="postBox">
+    <div class="postBox wrapBox">
         <form method="post">
             <p>标题：<input type="text" name="title"/></p>
             <p>正文：</p>
