--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -1,5 +1,5 @@
 <%- include header %>
-    <div class="regbox loginbox">
+    <div class="regbox loginbox wrapBox">
         <form method="post">
             <ul>
                 <li><span>用户名：</span><input type="text" name="name"/></li>
