--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
             <p>标题：<input type="text" name="title" value="<%= post.title %>" /></p>
             <p>正文：</p>
             <p><textarea name="post"  cols="20" rows="10" ><%= post.post %></textarea></p>
-            <input class='postBtn' type="submit" value="保存修改"/>
+            <input class='postBtn' type="submit" value="保存"/>
         </form>
     </div>
 <%- include footer %>
