--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,6 +25,8 @@
         <nav>
             <ul>
                 <li><a href="/" title="主页">主页</a></li>
+                <li><a href="/archive">存档</a></li>
+                <li><a href="/tags">标签</a></li>
                 <% if(user) { %>
                 <li><a href="/post" title="发表">发表</a></li>
                 <li><a href="/upload" title="上传">上传</a></li>
