--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,6 +2,7 @@
     <div class="postBox wrapBox">
         <form method="post">
             <p>标题：<input type="text" name="title"/></p>
+            <p>添加标签：<input class="tags" type="text" name="tag1"/><input class="tags" type="text" name="tag2"/><input class="tags" type="text" name="tag3"/></p>
             <p>正文：</p>
             <p><textarea name="post"  cols="20" rows="10" ></textarea></p>
             <input class='postBtn' type="submit" value="发表"/>
